@@ -38,7 +38,8 @@
 #include <rtems/confdefs.h>
 #include <stdio.h>
 #include <rtems/rtems_bsdnet.h>
-#include <ftpd.h>
+#include <rtems/ftpd.h>
+#include <rtems/untar.h>
 
      
 #include <rtems/error.h>
